# reco

./: .gitignore  Makefile  README.md  ec2_ip.txt  flow_diagram.md  new_system_setup.md
reco_analysis/: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
reco_analysis/data/patients/: patients_1.0.json  patients_1.0_with_transcripts.json
reco_analysis/docs/: mkdocs.yml
reco_analysis/docs/docs/: index.md
reco_analysis/llm_judge/: summary_judge.py
reco_analysis/models/: create_patients.py
reco_analysis/notebooks/: 1.0-af-milestone1.ipynb  1.0-gk-milestone1.ipynb  1.0_af_llm_judge_summarization.ipynb  1.1-gk-milestone1.ipynb  1.1_llm_judge_summarization.ipynb  MIMIC_Explore.twb  chatbot.ipynb  chatbot_2.0.ipynb  chatbot_conv_terminate.ipynb  chatbot_patient_scenarios.ipynb  conversation_closing_detection.ipynb  eval-llm-as-a-judge.ipynb  read_JSON.ipynb  sql_memory_store.ipynb  summarization_1.1.ipynb  summarization_patient_scenarios.ipynb  throwaway_explorer.ipynb  transcript_extractor.ipynb
reco_analysis/notebooks/data_movers/: add_patient_transcripts.ipynb
reco_analysis/notebooks/db_setup/: create_default_hcp.ipynb
reco_analysis/notebooks/end_detection/: conversation_closing_detection.ipynb  transcript_extractor.ipynb
reco_analysis/notebooks/experiment_analysis/: 01_analyze_gpts.ipynb
reco_analysis/notebooks/json_readers/: read_JSON.ipynb  throwaway_explorer.ipynb  transcript_summary_reviewer.ipynb
reco_analysis/notebooks/judge/: 1.0_af_llm_judge_summarization.ipynb  1.0_fg_llm_judge.ipynb  1.1_fg_llm_judge.ipynb  2.0_eval_llm_judge_summarization.ipynb  2.0_eval_llm_judge_transcript.ipynb  2.0_llm_judge_summarization.ipynb  2.0_llm_judge_transcript.ipynb  2.1_eval_llm_judge_summarization.ipynb  2.1_eval_llm_judge_transcript.ipynb  2.1_llm_judge_summarization.ipynb  2.1_llm_judge_transcript.ipynb  output_gpt35.csv  (+4 more)
reco_analysis/python_files/: calculate_demographics.py  create_patients.py  get_patients_to_exclude.py  update_mimic_cc.py
reco_analysis/reco_analysis/: __init__.py  config.py  data_models.py  dataset.py  features.py  mimic_query.sql  plots.py  streamlit_app.py
reco_app/: .env.example  pyproject.toml
reco_app/backend/: conversational_ai.py  dialogue_agent.py  dialogue_simulator.py  prompts.py
reco_app/tests/: test_dialogue_agent.py
(+58 files in other folders)
